[package]
name = "assert-panic"
version = "1.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Assert that a panic happens, and optionally what (kind of) panic happens"
repository = "https://github.com/Tamschi/assert-panic"
documentation = "https://docs.rs/assert-panic/1.0.1/assert-panic/macro.assert_panic.html"
readme = "README.md"
keywords = ["assert", "panic"]
categories = ["development-tools::testing"]
include = ["/LICENSE*", "/CHANGELOG.md", "/README.md", "/src/**.rs", "/tests/**.rs"]

[dev-dependencies]
version-sync = "0.9"
